# reflectpp

./: CMakeLists.txt  Reflect++.cmake  Reflex++.cmake  main.cpp
tests/: CMakeLists.txt  struct_a.hpp  struct_b.hpp  test_members_getting.cpp  test_members_setting.cpp  test_nested_types.cpp
